tests/security/taintThroughStringCheck/output.txt
ERROR: TaintedData - input.hack:16:10 - Data from a URL query string found its way to an HTML tag